--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "react": "^16.8.3",
+    "react": "^16.3.2",
     "react-bootstrap": "^1.0.0-beta.5",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.3.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5"
   },
   "scripts": {
