--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.4",
+    "react-popup": "^0.10.0",
     "react-scripts": "^2.1.8",
     "reactjs-popup": "^1.3.2",
     "reactstrap": "^7.1.0"
