--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.2.10",
     "mongoose-validator": "^2.1.0",
     "morgan": "^1.9.0",
+    "multer": "^1.4.1",
     "node-sass-middleware": "^0.11.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
