--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "mdbreact": "^4.11.0",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.6",
+    "react-date-picker": "^7.5.0",
     "react-dom": "^16.8.4",
+    "react-grid-gallery": "^0.5.4",
     "react-popup": "^0.10.0",
     "react-scripts": "^2.1.8",
     "reactjs-popup": "^1.3.2",
