--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-date-picker": "^7.5.0",
+    "react-datepicker": "^2.3.0",
     "react-dom": "^16.8.4",
     "react-grid-gallery": "^0.5.4",
     "react-popup": "^0.10.0",
